--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
 
         <dependency>
             <groupId>com.sequoiadb</groupId>
-            <artifactId>base</artifactId>
-            <version>2.6.3</version>
+            <artifactId>sequoiadb-driver</artifactId>
+            <version>2.6.4</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
